# computer_architecture

./: .gitignore  README.md
basics/: CMakeLists.txt  array_explore.cpp  cctype_explore.cpp  class_explore.cpp  debugger_example.cpp  hexdump.hpp  int_explore.cpp  memory_explore.cpp  pointer_explore.cpp  reference_explore.cpp  size_explore.cpp  string_explore.cpp  trace_explore.cpp
emulator/: .gitignore  CMakeLists.txt  emulator.cpp  prog.c
